package com.kelvin.filme_note.dto.review;

public  class UpdateReviewRequest {
    public String description;
    public Integer score;
}
